<resources>
    <string name="app_name">Favorite Scripture App</string>
    <string name="book">Ether</string>
    <string name="action_settings">Settings</string>
    <string name="chapter">4</string>
    <string name="verse">11-12</string>
    <string name="book_label">Book:</string>
    <string name="chapter_label">Chapter:</string>
    <string name="verse_label">Verse(s):</string>
    <string name="share">Share</string>
    <string name="title_activity_share">Favorite Scripture App</string>
    <string name="fav">Your favorite scripture is:</string>
</resources>
