<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
    android:textAlignment="center">

    <!-- Dummy item to prevent bookEditText from receiving focus -->
    <LinearLayout
        android:focusable="true" android:focusableInTouchMode="true"
        android:layout_width="0px" android:layout_height="0px"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/book_label"
        android:id="@+id/bookLabelTextView"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/bookEditText"
        android:text="@string/book"
        android:layout_below="@+id/bookLabelTextView"
        android:layout_centerHorizontal="true"
        android:singleLine="true"
        android:selectAllOnFocus="true"
        android:inputType="text" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/chapter_label"
        android:id="@+id/chapterLabelTextView"
        android:layout_below="@+id/bookEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:ems="2"
        android:id="@+id/chapterEditText"
        android:layout_below="@+id/chapterLabelTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/chapter"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        android:numeric="integer"
        android:maxLength="3" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/verse_label"
        android:id="@+id/verseLabelTextView"
        android:layout_below="@+id/chapterEditText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="number|text"
        android:ems="4"
        android:id="@+id/verseEditText"
        android:layout_below="@+id/verseLabelTextView"
        android:layout_centerHorizontal="true"
        android:text="@string/verse"
        android:selectAllOnFocus="true"
        android:singleLine="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/share"
        android:id="@+id/shareButton"
        android:layout_alignParentBottom="true"
        android:layout_alignLeft="@+id/verseEditText"
        android:layout_alignStart="@+id/verseEditText" />

</RelativeLayout>
